--- a/detector/detector/template/service_detail.html
+++ b/detector/detector/template/service_detail.html
@@ -162,6 +162,38 @@
                 <!-- process file -->
                 <div class="row">
                     <div class="col-md-12">
+                        <div class = "card">
+                            <div class="header">
+                                <h4 class="title">Web Services Detail</h4>
+                                <p class="category">Service ID: {{serviceId}}</p>
+                            </div>
+                            <div class="content">
+                                <!-- Analysis Statistic Data -->
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="alert alert-info alert-with-icon">
+                                            <span data-notify="icon" class="pe-7s-loop"></span>
+                                            <span data-notify="message">Totally Execute Count: {{count}}</span>
+                                        </div>
+                                        <div class="alert alert-success alert-with-icon">
+                                            <span data-notify="icon" class="pe-7s-timer"></span>
+                                            <span data-notify="message">Longest Execution Time: {{max_time}}(ms)</span>
+                                        </div>
+                                    </div>
+                                    <div class = "col-md-6">
+                                        <div class="alert alert-warning alert-with-icon">
+                                            <span data-notify="icon" class="pe-7s-clock"></span>
+                                            <span data-notify="message">Shortest Execution Time: {{min_time}}(ms)</span>
+                                        </div>
+                                        <div class="alert alert-danger alert-with-icon">
+                                            <span data-notify="icon" class="pe-7s-wristwatch"></span>
+                                            <span data-notify="message">Average Execution Time: {{avg_time}}(ms)</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <br/>
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">Hot Spot</h4>
@@ -268,9 +300,6 @@
 
     <script src="/static/assets_V3/js/amcharts.js"></script>
     <script src="/static/assets_V3/js/serial.js"></script>
-    <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-    <script src="https://www.amcharts.com/lib/3/themes/patterns.js"></script>
-    <script src="https://www.amcharts.com/lib/3/plugins/export/export.js"></script>
     <script type="text/javascript" src = "/static/assets/js/circle.js"></script>
     <script type="text/javascript" src = "/static/assets/js/tree.js"></script>
     <script src="/static/assets/js/d3.min.js"></script>
