template  delete unnessary stuff

--- a/detector/detector/template/index.html
+++ b/detector/detector/template/index.html
@@ -73,7 +73,7 @@
 	    			<br>
 	    			<img class="hidden-xs hidden-sm hidden-md" src="/static/assets/img/arrow2.png">
 	    			<h5>High Accuracy</h5>
-	    			<p>Nearly 100 percentage accuracy can obtained</p>
+	    			<p>More than 80 percentage accuracy can obtained</p>
 	    		</div>
 	    	</div>
 	    </div> <!--/ .container -->
