--- a/detector/detector/template/user.html
+++ b/detector/detector/template/user.html
@@ -54,13 +54,13 @@
             </div>
 
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="/dashboard/">
                         <i class="pe-7s-graph"></i>
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/profile/">
                         <i class="pe-7s-user"></i>
                         <p>User Profile</p>
@@ -70,30 +70,6 @@
                     <a href="/history/">
                         <i class="pe-7s-note2"></i>
                         <p>History Record</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="typography.html">
-                        <i class="pe-7s-news-paper"></i>
-                        <p>Trace Compare</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="icons.html">
-                        <i class="pe-7s-science"></i>
-                        <p>Icons</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="maps.html">
-                        <i class="pe-7s-map-marker"></i>
-                        <p>Maps</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="notifications.html">
-                        <i class="pe-7s-bell"></i>
-                        <p>Notifications</p>
                     </a>
                 </li>
             </ul>
@@ -231,9 +207,10 @@
                                       <br>
                                     </a>
                                 </div>
-                                <p class="description text-center"> "Lamborghini Mercy <br>
-                                                    Your chick she so thirsty <br>
-                                                    I'm in that two seat Lambo"
+                                <p class="description text-center"> 
+                                    "Performence Engineering Group<br>
+                                    Fouse on Web Application Performance Tuning and Optimization <br>
+                                    Senior university student"
                                 </p>
                             </div>
                             <hr>
